--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         /* Hero */
         #hero {
             height:100vh; min-height:600px;
-            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/heroj.gp') center/cover no-repeat;
+            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/heroj.jgp') center/cover no-repeat;
             display:flex; align-items:center; color:white; text-align:center; position:relative;
         }
         .profile-img {
