--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
         /* Hero */
         #hero {
             height:100vh; min-height:600px;
-            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/heroj.jgp') center/cover no-repeat;
+            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/hero.jgp') center/cover no-repeat;
             display:flex; align-items:center; color:white; text-align:center; position:relative;
         }
+        
         .profile-img {
             width:180px; height:180px; border-radius:50%; border:6px solid white; margin-bottom:1.5rem;
             object-fit:cover; box-shadow:0 10px 30px rgba(0,0,0,0.4);
