--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         /* Hero */
         #hero {
             height:100vh; min-height:620px;
-            background: linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url('images/heroj.gp') center/cover no-repeat;
+            background: linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url('images/hero.jpg') center/cover no-repeat;
             display:flex; align-items:center; color:white; text-align:center;
         }
         .profile-img {
