Update logo text from 'DANNY RAMADHAN' to 'PORTFOLIO'

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <nav>
         <div class="container nav-content">
-            <div class="logo">DANNY RAMADHAN</div>
+            <div class="logo">PORTFOLIO</div>
             <div class="menu-toggle" id="menuToggle"><i class="fas fa-bars"></i></div>
             <div class="nav-links" id="navLinks">
                 <a href="#" class="nav-item active" data-section="hero" data-key="nav_home">Home</a>
